# InventoryBench

./: .env.example  .gitattributes  .gitignore  README.md  check_all_profits.py  check_profit.py  pyproject.toml
docs/: build_stats.py  dataset.html  index.html  leaderboard.html  leaderboard_data.json  serve.py
docs/specifications/: GPT-5_Mini_LLM.html  GPT-5_Mini_LLMtoOR.html  GPT-5_Mini_ORtoLLM.html  Gemini_3_Flash_LLM.html  Gemini_3_Flash_LLMtoOR.html  Gemini_3_Flash_ORtoLLM.html  Grok_4.1_Fast_LLM.html  Grok_4.1_Fast_LLMtoOR.html  Grok_4.1_Fast_ORtoLLM.html
documentation/: benchmark.md  inventory_game.md  strategies.md
eval/: BASELINE_RESULTS.md  README.md  evaluate_results.py  policy_template.py  run_baseline_policy.py  test_evaluation.json
leaderboard_website/: README.md  dataset.html  generate_detail_pages.py  index.html  leaderboard.html
leaderboard_website/data/: leaderboard.json
or_agent/: __init__.py  core.py  state.py
or_agent/agents/: __init__.py  basic_agents.py  human_feedback_agent.py
or_agent/envs/: README.md  __init__.py  registration.py
or_agent/wrappers/: __init__.py
results/: gemini-3-flash_bench_llm_evaluation.json
results/GPT-5 Mini (LLM)/: README.md  scores.json
results/GPT-5 Mini (LLM→OR)/: README.md  scores.json
scripts/: benchmark_all_strategies.py  compare_or_scores.py  extract_all_methods.py  extract_decisions_from_logs.py  perfect_score.py  run_batch_benchmark.py  run_clairvoyant.py  run_dual_llm.py  run_llm.py  run_llm_to_or.py  run_or.py  run_or_to_llm.py  run_simple_llm_to_or.py
(+43668 files in other folders)
