[project]
name = "or-agent"
version = "0.1.0"
description = "OR Agent: LLM + Operations Research Benchmark for Inventory Management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai",
    "numpy",
    "pandas",
    "scipy",
    "python-dotenv",
]

[project.urls]
"Homepage" = "https://github.com/TianyiPeng/InventoryBench"

[project.optional-dependencies]
# Additional LLM provider agents
anthropic = ["anthropic"]
google = ["google-generativeai"]
huggingface = ["transformers"]
cerebras = ["cerebras-cloud-sdk"]
aws = ["boto3"]
all = ["anthropic", "google-generativeai", "transformers", "cerebras-cloud-sdk", "boto3"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["or_agent*"]
